# GaLib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile.in  LICENSE  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: mainpage.md
examples/: example_simple.cpp  example_usage.cpp
include/genetic/: genetic_algorithm.hpp  genetic_config.hpp  genetic_individu.hpp  genetic_utils.hpp
tests/: CMakeLists.txt  test_genetic.cpp
